--- a/.editorconfig
+++ b/.editorconfig
@@ -4,8 +4,9 @@ root = true
 charset = utf-8
 end_of_line = lf
 indent_size = 4
-indent_style = tab
+indent_style = space
 insert_final_newline = true
 
-[*.fnl]
+[*.{fnl,lua}]
+indent_size = 4
 indent_style = space
